<resources>
    <string name="app_name">You Learn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="channel_name">channel name</string>
    <string name="video_title">video title</string>
    <string name="items">items</string>
    <string name="home">Home</string>
    <string name="reading_list">Reading List</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_icon">Search icon</string>
    <string name="delete_icon">Delete icon</string>
    <string name="share_icon_tap_to_share_video">Share icon tap to share video</string>
    <string name="add_to_readings_library_icon">add to readings library icon</string>
    <string name="readings">Readings</string>
    <string name="share">Share</string>
    <string name="published_at">published At</string>
    <string name="play_icon">play icon</string>
    <string name="close_icon">close icon</string>
    <string name="added">Added</string>
    <string name="application_logo">application Logo</string>
    <string name="add_videos_in_readings_tab">Add videos in Readings tab!</string>
    <string name="no_internet_available">No internet available</string>
    <string name="you_are_not_connected">You are not connected!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_class">Welcome in Class Room</string>
    <string name="skip">Skip</string>
    <string name="study_at_your_peace">Study at your peace</string>
</resources>