<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/reading_thumbnail"
            android:layout_width="160dp"
            android:layout_height="110dp"
            android:contentDescription="@string/video_thumbnail"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/reading_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="4dp"
            android:text="@string/video_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/reading_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reading_channelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="4dp"
            android:text="@string/channel_name"
            app:layout_constraintStart_toEndOf="@+id/reading_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/reading_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>