<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="youTubePlayerViewModel"
            type="com.kapil.android.youlearn.youtubeplayer.YouTubePlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Video Title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_constraintLayout" />

        <TextView
            android:id="@+id/channelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Channel title"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/publishedAt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/publishedAt"
            app:layout_constraintTop_toBottomOf="@+id/publishedAt" />

        <TextView
            android:id="@+id/publishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/published_at"
            android:textColor="#757575"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />


        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/share_icon_tap_to_share_video"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/publishedAt"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintTop_toTopOf="@+id/publishedAt"
            app:layout_constraintVertical_bias="0.437"
            app:srcCompat="@drawable/ic_share" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_to_readings_library_icon"
            android:padding="5dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/share"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_save" />

        <ImageView
            android:id="@+id/added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_to_readings_library_icon"
            android:padding="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/share"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_added" />

        <TextView
            android:id="@+id/txt_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/added"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/save"
            app:layout_constraintStart_toStartOf="@+id/save"
            app:layout_constraintTop_toBottomOf="@+id/save" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channelTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playerRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/txt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/share"
            app:layout_constraintStart_toStartOf="@+id/share"
            app:layout_constraintTop_toBottomOf="@+id/share" />

        <TextView
            android:id="@+id/txt_readings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readings"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/save"
            app:layout_constraintStart_toStartOf="@+id/save"
            app:layout_constraintTop_toBottomOf="@+id/save" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youTubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:autoPlay="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showFullScreenButton="true" />

            <ImageView
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:alpha="0"
                android:contentDescription="@string/play_icon"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_close"
                app:layout_constraintEnd_toStartOf="@+id/btn_close"
                app:layout_constraintTop_toTopOf="@+id/btn_close"
                app:srcCompat="@drawable/ic_play" />

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:alpha="0"
                android:contentDescription="@string/close_icon"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintVertical_bias="1.0">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />
        </FrameLayout>

        <ImageView
            android:id="@+id/imgnoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:src="@mipmap/ic_no_internet"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/playerRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/playerRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:contentDescription="@string/no_internet_available" />

        <TextView
            android:id="@+id/txtNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_connected"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/playerRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/imgnoInternet"
            app:layout_constraintStart_toStartOf="@+id/imgnoInternet"
            app:layout_constraintTop_toBottomOf="@+id/imgnoInternet" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>