<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="5dp">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/fragment_playList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".playlist.YoutubeVideos">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:queryHint="Search ClassRoom"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/search_icon"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/application_logo"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_logo_home"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/toolbar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videosRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:background="@color/white">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/img_noInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_no_internet"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:contentDescription="@string/no_internet_available" />

            <TextView
                android:id="@+id/txt_noInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_are_not_connected"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="280dp"
                android:textColor="@color/black"
                android:visibility="invisible"
                android:textSize="16sp"/>
        </FrameLayout>

    </FrameLayout>
</layout>